# HawkinsRAG

./: .gitignore  .replit  README.md  implementation_plan.md  pyproject.toml  replit.nix
attached_assets/: Integration.txt  file_rag.py
docs/: README.md
docs/examples/: advanced_usage.py  basic_usage.py  loader_examples.py
docs/hawkinsrag/: README.md  configuration.md
docs/hawkinsrag/loaders/: directory_loader.md  index.md
examples/: simple_rag.py  test_advanced_loaders.py  test_audio_rag.py  test_directory_loader.py  test_github_loader.py  test_google_loaders.py  test_hawkinsdb_rag.py  test_loaders.py  test_qna_loader.py  test_rag.py  test_rag_advanced.py  test_slack_loader.py  test_user_api.py  test_web_loaders.py
src/hawkins_rag/utils/: google_auth.py
